--- a/force-app/main/default/lwc/bmiCalculator/bmiCalculator.html
+++ b/force-app/main/default/lwc/bmiCalculator/bmiCalculator.html
@@ -1,3 +1,22 @@
 <template>
-   <div>Hello my name is ravi</div> 
+   <div class="app">
+      <div class="box">
+         <h1>BMI Calculator</h1>
+         <form>
+            
+         </form>
+         <div class="info-wrapper">
+            <h2>What your BMI means</h2>
+            <p class="slds-var-m-bottom_medium">Once you have measured your BMI, you can determine your healthy range. if your BMI is:</p>
+            <h3 class="slds-text-color_error">Under 18.5</h3>
+            <p class="slds-var-m-bottom_medium">you are very underweight and possibly malnourished.</p>
+            <h3 class="slds-text-color_success">Between 18.5 to 24.9</h3>
+            <p class="slds-var-m-bottom_medium">you have a healthy weight range for young and middle-aged adults.</p>
+            <h3 class="slds-text-color_error">25.0 to 29.9</h3>
+            <p class="slds-var-m-bottom_medium">you are overweight</p>
+            <h3 class="slds-text-color_error">Over 30</h3>
+            <p class="slds-var-m-bottom_medium">you are obese</p>
+         </div>
+      </div>
+   </div> 
 </template>
