--- a/force-app/main/default/lwc/bmiCalculator/bmiCalculator.html
+++ b/force-app/main/default/lwc/bmiCalculator/bmiCalculator.html
@@ -3,7 +3,13 @@
       <div class="box">
          <h1>BMI Calculator</h1>
          <form>
-                 
+            <div class="slds-form-element">
+               <label class="slds-form-element__label" for="text-input-id-2">
+               <abbr class="slds-required" title="required" aria-hidden="true">* </abbr>Input Label</label>
+               <div class="slds-form-element__control">
+               <input type="text" id="text-input-id-2" placeholder="Placeholder text…" required="" class="slds-input" />
+               </div>
+            </div>     
          </form>
          <div class="info-wrapper">
             <h2>What your BMI means</h2>
