--- a/force-app/main/default/lwc/alarmClockApp/alarmClockApp.html
+++ b/force-app/main/default/lwc/alarmClockApp/alarmClockApp.html
@@ -1,3 +1,19 @@
 <template>
-    <h1>Alarm Clock</h1>
+    <div class="alarm-card">
+        <h1>Alarm Clock</h1>
+        <img src={clockImage} alt="clock"  height="200px" width="200px" /> 
+        <h2>{currentTime}</h2>
+        <div class="slds-grid slds-gutters">
+            <div class="slds-col">
+                <span>Hours</span>
+            </div>
+            <div class="slds-col">
+                <span>Min</span>
+            </div>
+            <div class="slds-col">
+                <span>Am/pm</span>
+            </div>
+        </div>
+        <button class="slds-button slds-button_neutral slds-button_stretch">Set Alarm</button>
+    </div>
 </template>
