--- a/force-app/main/default/lwc/alarmClockApp/alarmClockApp.html
+++ b/force-app/main/default/lwc/alarmClockApp/alarmClockApp.html
@@ -5,54 +5,20 @@
         <h2>{currentTime}</h2>
         <div class="slds-grid slds-gutters">
             <div class="slds-col">
-                <div class="slds-form-element">
-                    <label class="slds-form-element__label custom-label" for="select-hour">Hour(s)</label>
-                    <div class="slds-form-element__control">
-                        <div class="slds-select_container">
-                            <select class="slds-select custom-select" id="select-hour">
-                                <template for:each={hours} for:item="hour">
-                                    <option key={hour} value={hour}>{hour}></option>
-                                </template>
-                                <option value="">Select…</option>
-                                <option>Option One</option>
-                                <option>Option Two</option>
-                                <option>Option Three</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
+                <c-clock-dropdown label="Hour(s)" options={hours} unique-id="select-hour" onoptionhandler={optionhandler} ></c-clock-dropdown>
             </div>
             <div class="slds-col">
-                <div class="slds-form-element">
-                    <label class="slds-form-element__label custom-label" for="select-minute">Minutes(s)</label>
-                    <div class="slds-form-element__control">
-                        <div class="slds-select_container">
-                            <select class="slds-select custom-select" id="select-minute">
-                                <option value="">Select…</option>
-                                <template for:each={minutes} for:item="min">
-                                    <option key={min} value={min}>{min}></option>
-                                </template>
-                            </select>
-                        </div>
-                    </div>
-                </div>
+                <c-clock-dropdown label="Minute(s)" options={minutes} unique-id="select-minutes" onoptionhandler={optionhandler} ></c-clock-dropdown>(s)" options={hours} unique-id="select-hour" ></c-clock-dropdown>
             </div>
             <div class="slds-col">
-                <div class="slds-form-element">
-                    <label class="slds-form-element__label custom-label" for="select-ampm">AM/PM</label>
-                    <div class="slds-form-element__control">
-                        <div class="slds-select_container">
-                            <select class="slds-select custom-select" id="select-ampm">
-                                <option value="">Select…</option>
-                                <template for:each={meridiems} for:item="meri">
-                                    <option key={meri} value={meri}>{meri}></option>
-                                </template>
-                            </select>
-                        </div>
-                    </div>
-                </div>
+                <c-clock-dropdown label="AM/PM" options={meridiems} unique-id="select-meridiems" onoptionhandler={optionhandler} ></c-clock-dropdown>(s)" options={hours} unique-id="select-hour" ></c-clock-dropdown>
             </div>
         </div>
-        <button class="slds-button slds-button_neutral slds-button_stretch">Set Alarm</button>
+        <template if:false={isAlarmSet} >
+            <button class="slds-button slds-button_neutral slds-button_stretch" onclick={setAlarmHandler} disabled={isFieldNotSelected}>Set Alarm</button>
+        </template>
+        <template if:true={isAlarmSet}>
+            <button class="slds-button slds-button_neutral slds-button_stretch" onclick={clearAlarmHandler} disabled={isFieldNotSelected}>Clear Alarm</button>
+        </template>
     </div>
 </template>
