--- a/force-app/main/default/lwc/alarmClockApp/alarmClockApp.html
+++ b/force-app/main/default/lwc/alarmClockApp/alarmClockApp.html
@@ -1,7 +1,7 @@
 <template>
     <div class="alarm-card">
         <h1>Alarm Clock</h1>
-        <img src={clockImage} alt="clock" height="200px" width="200px" />
+        <img src={clockImage} alt="clock" height="200px" width="200px" class={shakeImage} />
         <h2>{currentTime}</h2>
         <div class="slds-grid slds-gutters">
             <div class="slds-col">
